src/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Inria+Sans:wght@300&display=swap');

:root {
    /* Colors */
    --black: rgba(34, 34, 34, 1);
    --dark-slate-gray: rgba(0, 56, 73, 1);
    --dark-slate-gray-2: rgba(43, 43, 43, 1);
    --white: rgba(255, 255, 255, 1);

    /* Typographies */
    /* inika-20-regular */
    --inika-20-regular-family: "Inika";
    --inika-20-regular-size: 20px;
    --inika-20-regular-weight: 400;
    --inika-20-regular-line-height: normal;

    /* inria-sans-25-regular */
    --inria-sans-25-regular-family: "Inria Sans";
    --inria-sans-25-regular-size: 25px;
    --inria-sans-25-regular-weight: 400;
    --inria-sans-25-regular-line-height: normal;

    /* inria-sans-26-regular */
    --inria-sans-26-regular-family: "Inria Sans";
    --inria-sans-26-regular-size: 26px;
    --inria-sans-26-regular-weight: 400;
    --inria-sans-26-regular-line-height: normal;

    --inria-sans-20-regular-family: "Inria Sans";
    --inria-sans-20-regular-size: 20px;
    --inria-sans-20-regular-weight: 400;
    --inria-sans-20-regular-line-height: normal;

    /* inria-sans-43-regular */
    --inria-sans-43-regular-family: "Inria Sans";
    --inria-sans-43-regular-size: 43px;
    --inria-sans-43-regular-weight: 400;
    --inria-sans-43-regular-line-height: normal;
}

*,
*::before,
*::after {
    box-sizing: border-box;
}

* {
    margin: 0;
}

body {
    height: 100%;
    width: 100%;
    background-color: rgba(20, 17, 17, 17);
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    flex: 1 0 auto;
}

nav {
    background-color: var(--dark-slate-gray);
    width: 100%;
}

.navigation {
    display: flex;
    flex-direction: row;
    padding-top: 50px;
    padding-bottom: 50px;
    margin: 0 auto;
    max-width: 1400px
}

.logo-box {
    margin-left: 30px;
    margin-right: 100px;
}

.menu-box {
    display: flex;
    flex-direction: row;
    column-gap: 50px;
}

.search-and-sm-box {
    margin-left: 600px;
    display: flex;
    flex-direction: row;
    column-gap: 30px;
    margin-top: auto;
    margin-bottom: auto;
}

.search-icon {
    width: 45px;
    height: 45px;
    background: linear-gradient(
            rgba(104, 183, 255, 0.35),
            rgba(104, 183, 255, 0.35)
    ),
    url("../img/search.png");
    background-size: 100% 100%;
    border-radius: 10px;
    box-shadow: 0 8px 24px 0 rgba(0, 0, 0, 0.25);
}

.vk-tg-icon {
    width: 45px;
    height: 45px;
    box-shadow: 0 8px 24px 0 rgba(0, 0, 0, 0.25);
    border-radius: 50%;
}

.increaseCountIcon {
    place-content: center;
    background: transparent;
    border: 1px solid var(--dark-slate-gray);
    border-radius: 10px;
}

.increaseCountIcon:hover {
    background-color: var(--dark-slate-gray)
}

.decreaseCountIcon {
    place-content: center;
    background: transparent;
    border: 1px solid var(--dark-slate-gray);
    border-radius: 10px;
}

.decreaseCountIcon:hover {
    background-color: var(--dark-slate-gray)
}

.main-box {
    margin: 0 auto 30px;
    max-width: 1400px
}

.polaris-text {
    text-align: center;
    color: var(--white);
    text-shadow: 0 8px 24px rgba(0, 0, 0, 0.25);
    font-family: var(--inria-sans-43-regular-family);
    font-size: var(--inria-sans-43-regular-size);
    font-weight: var(--inria-sans-43-regular-weight);
    line-height: var(--inria-sans-43-regular-line-height);

}

.nav-text {
    white-space: nowrap;
    margin-top: 20px;
    color: var(--white);
    text-shadow: 0 8px 24px rgba(0, 0, 0, 0.25);
    font-family: var(--inria-sans-25-regular-family);
    font-size: var(--inria-sans-25-regular-size);
    font-weight: var(--inria-sans-25-regular-weight);
    line-height: var(--inria-sans-25-regular-line-height);
}

.about-us-box {
    background-color: var(--black);
    border: 1px solid var(--dark-slate-gray);
    border-radius: 10px;
    padding: 26px 21px 602px 22px;
    margin: 10px auto 10px;
    max-width: 70%;
}

.about-us-text {
    color: var(--white);
    display: flex;
    font-family: var(--inria-sans-26-regular-family);
    font-size: var(--inria-sans-26-regular-size);
    font-weight: var(--inria-sans-26-regular-weight);
    line-height: var(--inria-sans-26-regular-line-height);
}

footer {
    background-color: var(--dark-slate-gray-2);
    width: 100%;
    height: 160px;
}

.footer-box {
    padding-top: 30px;
    padding-bottom: 50px;
    display: flex;
    justify-content: center;
    margin: 20px auto 0;
    max-width: 1400px;
}

.all-rights-reserved {
    color: var(--white);
    font-family: var(--inika-20-regular-family);
    font-size: var(--inika-20-regular-size);
    font-weight: var(--inika-20-regular-weight);
    line-height: var(--inika-20-regular-line-height);
}

.contacts-box {
    background-color: var(--black);
    border-radius: 10px;
    border: 1px solid var(--dark-slate-gray);
    padding: 23px 23px 36px 22px;
    max-width: 70%;
    margin: 20px auto 300px;
}

.contacts-text {
    color: var(--white);
    font-family: var(--inria-sans-26-regular-family);
    font-size: var(--inria-sans-26-regular-size);
    font-weight: var(--inria-sans-26-regular-weight);
    line-height: var(--inria-sans-26-regular-line-height);
}

.add-post-text {
    color: var(--white);
    text-align: center;
    font-family: var(--inria-sans-26-regular-family);
    font-size: var(--inria-sans-26-regular-size);
    font-weight: var(--inria-sans-26-regular-weight);
    line-height: var(--inria-sans-26-regular-line-height);
}

.sidebar {
    margin-top: 30px;
    margin-left: 30px;
    width: 30%;
    float: right;
}

.add-post-box {
    background-color: var(--black);
    border-radius: 10px;
    border: 1px solid var(--dark-slate-gray);
    padding: 35px 100px 35px;
}

.add-post-box:hover {
    background-color: var(--dark-slate-gray)
}

.post-box {
    background-color: var(--black);
    border-radius: 10px;
    padding: 20px 15px 20px 15px;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    border: 1px solid var(--dark-slate-gray);
    max-width: 705px;
}

.post {
    margin-left: 30px;
    margin-top: 30px;
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    max-width: 805px;
}

.avatar {
    width: 45px;
    height: 45px;
    background-color: rgba(217, 217, 217, 1);
    border-radius: 50%;
    margin-right: 10px;
}

.author-name-text {
    height: 41px;
    width: 240px;
    color: var(--white);
    display: flex;
    text-align: center;
    margin-top: 4px;
    font-family: var(--inria-sans-26-regular-family);
    font-size: var(--inria-sans-26-regular-size);
    font-weight: var(--inria-sans-26-regular-weight);
    line-height: var(--inria-sans-26-regular-line-height);
}
.post-text {
    height: 160px;
    width: 660px;
    color: var(--white);
    font-family: var(--inria-sans-26-regular-family);
    font-size: var(--inria-sans-26-regular-size);
    font-weight: var(--inria-sans-26-regular-weight);
    line-height: var(--inria-sans-26-regular-line-height);
}

.title {
    color: var(--white);
    left: 9px;
    top: -48px;
    font-family: var(--inria-sans-43-regular-family);
    font-size: var(--inria-sans-43-regular-size);
    font-weight: var(--inria-sans-43-regular-weight);
    line-height: var(--inria-sans-43-regular-line-height);
}

.top-side-of-post {
    margin-bottom: 5px;
    display: flex;
    align-items: flex-start;
}

.bottom-side-of-post {
    display: flex;
    flex-direction: column;
    margin-left: 13px;
    position: relative;
    color: var(--white);
    font-family: var(--inria-sans-26-regular-family);
    font-size: var(--inria-sans-26-regular-size);
    font-weight: var(--inria-sans-26-regular-weight);
    line-height: var(--inria-sans-26-regular-line-height);
}

.counter {
    margin-right: 5px;
    display: flex;
    flex-direction: column;
}

img:hover {
    color: var(--dark-slate-gray)
}

.counter * {
    font-size: 20px;
    margin: 2px 0;
}
.counter > p {
    display: flex;
    justify-content: space-around;
}

.counter-text {
    text-align: center;
    color: white;
}

@media (max-width: 1399px) {
    .search-and-sm-box {
        margin-left: 200px;
    }
    .contacts-box {
        margin-bottom: 200px;
    }
}

@media (max-width: 1100px) {

    .add-post-box {
        padding: 15px 50px 15px;
    }

    .sidebar {
        width: 20%;
        margin-left: 5px;
    }

    .navigation {
        flex-direction: column;
        padding-top: 10px;
        padding-bottom: 10px;
    }

    .menu-box {
        margin-left: 30px;
    }

    .search-and-sm-box {
        margin-left: 30px;
        margin-top: 30px;
    }

    .footer-box {
        padding-top: 10px;
        padding-bottom: 10px;
    }

    .main-box {
        column-gap: 10px;
    }

    .contacts-box {
        margin-bottom: 150px;
    }
}

@media (max-width: 920px) {
    .main-box {
        display: flex;
        flex-direction: column;
    }

    .post-box {
        max-width: 90%;
    }

    .post {
        max-width: 86%;
    }

    .sidebar {
        margin-left: 80px;
    }
}

@media (max-width: 650px) {

    .add-post-box {
        order: -1;
        margin-bottom: 30px;
    }

    .post-box {
        max-width: 70%;
    }

    .post {
        max-width: 67%;
    }

    .avatar {
        width: 35px;
        height: 35px;
    }

    .author-name-text {
        font-family: var(--inria-sans-20-regular-family);
        font-size: var(--inria-sans-20-regular-size);
        font-weight: var(--inria-sans-20-regular-weight);
        line-height: var(--inria-sans-20-regular-line-height);
    }

    .title {
        font-family: var(--inria-sans-26-regular-family);
        font-size: var(--inria-sans-26-regular-size);
        font-weight: var(--inria-sans-26-regular-weight);
        line-height: var(--inria-sans-26-regular-line-height);
    }

    .post-text {
        height: 160px;
        width: 450px;

        font-family: var(--inria-sans-20-regular-family);
        font-size: var(--inria-sans-20-regular-size);
        font-weight: var(--inria-sans-20-regular-weight);
        line-height: var(--inria-sans-20-regular-line-height);
    }
}

